add tts, stt and camera feature

--- a/app/src/main/res/layout/activity_stt.xml
+++ b/app/src/main/res/layout/activity_stt.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SttActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edStt"
+        android:inputType="textMultiLine"
+        android:lines="5"
+        android:hint="@string/hstt"
+        android:layout_alignParentTop="true"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/writestt"
+        android:id="@+id/btnStt"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
